# sekai-public

./: .bazelrc  .clang-format  .gitignore  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  build_card_timeline_main.cc  build_challenge_live_teams.sh  build_challenge_live_teams_main.cc  build_event_team.sh  build_event_team_main.cc  build_max_cr_report.sh  build_max_cr_report_main.cc  defs.bzl  list_external_deps.sh  pull.sh  refresh_compile_commands.sh  run_benchmarks.sh  run_local_server.sh  test.sh  test_wasm_compat.sh
base/: BUILD.bazel  init.cc  init.h  util.h  zstd.h
data/: BUILD.bazel
data/profile/: cards.csv  cards_v2.csv
frontend/: BUILD.bazel  _headers  console_log_sink.cc  console_log_sink.h  context.cc  context.h  context_test.cc  controller.cc  controller.h  controller_base.cc  controller_base.h  display_text.cc  display_text.h  element_id.cc  element_id.h  index.html  init.cc  init.h  log.cc  log.h  main.cc  max_cr_main.cc  ohnyajii.sass  ohnyajii_lib.js  sajii_lib.js  server.py  shell.html  styles.sass  util.cc  util.h
frontend/proto/: BUILD  BUILD.bazel  context.proto
frontend/templates/: BUILD.bazel  index.html.jinja  kondoyoupiece.html.jinja  notices.html.jinja  ohnyajii.html.jinja  shell.html.jinja
git/: BUILD.bazel  commit.cc  commit.h  errors.cc  errors.h  index.cc  index.h  init.cc  init.h  object_id.cc  object_id.h  reference.cc  reference.h  repository.cc  repository.h  repository_test.cc  signature.cc  signature.h  signature_test.cc
sample_repo/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  REPO.bazel  WORKSPACE  build_event_team.sh
sample_repo/data/: BUILD.bazel
sample_repo/data/profile/: constraints.textproto  profile.textproto
sekai/: BUILD.bazel  array_size.cc  array_size.h  array_size_test.cc  bitset.h  bitset_test.cc  bonus_limit.cc  bonus_limit.h  bonus_limit_test.cc  card.cc  card.h  card_base.cc  card_base.h  card_test.cc  challenge_live.cc  challenge_live.h  challenge_live_estimator.cc  challenge_live_estimator.h  character.cc  character.h  character_test.cc  combinations.h  config.cc  config.h  config_test.cc  estimator.cc  estimator.h  estimator_base.h  estimator_test.cc  event_bonus.cc  event_bonus.h  event_bonus_test.cc  file_util.cc  file_util.h  fixtures.cc  fixtures.h  max_character_rank.cc  max_character_rank.h  max_character_rank_test.cc  max_level.h  (+31 more)
sekai/db/: BUILD.bazel  generate_flat_db_main.cc  item_db.h  json_item_db.h  master_db.cc  master_db.h  master_db_benchmark.cc  master_db_test.cc
sekai/db/json/: BUILD.bazel  parser.cc  parser.h  parser_test.cc
sekai/db/proto/: BUILD  BUILD.bazel  action_set.proto  action_set_lottery_condition.proto  ad_reward.proto  all.h  another3dmv_cut_in.proto  appeal.proto  area.proto  area_item.proto  area_item_level.proto  area_playlist.proto  area_spirit_world_tree.proto  avatar_accessory.proto  avatar_coordinate.proto  avatar_costume.proto  avatar_motion.proto  avatar_skin_color.proto  background_music.proto  beginner_login_bonus.proto  beginner_login_bonus_summary.proto  beginner_mission.proto  beginner_mission_v2.proto  billing_product.proto  billing_shop_item.proto  billing_shop_item_exchange_cost.proto  billing_shop_item_group.proto  billing_shop_tab_children.proto  billing_shop_tab_parent.proto  bond.proto  bonds_honor.proto  bonds_honor_word.proto  bonds_live2d.proto  bonds_rank_up_live2d.proto  bonds_reward.proto  boost.proto  boost_item.proto  boost_present.proto  boost_present_cost.proto  card.proto  (+341 more)
sekai/history/: BUILD.bazel  analyze_history.sh  history_analyzer_main.cc
sekai/html/: BUILD.bazel  card.cc  card.h  card_timeline.cc  card_timeline.h  max_cr.cc  max_cr.h  report.cc  report.h  team.cc  team.h  version.cc  version.h  version_main.cc
sekai/html/styles/: BUILD.bazel  report.sass
sekai/proto/: BUILD.bazel  card.proto  card_state.proto  constraints.proto  event_bonus.proto  event_id.proto  max_character_rank.proto  profile.proto  team.proto  world_bloom.proto
sekai/run_analysis/: .dev.vars  BUILD.bazel  analyze_graph_handler.cc  analyze_graph_handler.h  analyze_play_handler.cc  analyze_play_handler.h  analyze_player_handler.cc  analyze_player_handler.h  analyze_team_handler.cc  analyze_team_handler.h  analyze_team_handler_test.cc  batch_handler.h  bridge.cc  clustering.cc  clustering.h  clustering_test.cc  compute_stats_handler.cc  compute_stats_handler.h  config.cc  config.h  fill_analysis.cc  fill_analysis.h  handler.cc  handler.h  handlers.cc  handlers.h  hello_world_main.cc  histogram.cc  histogram.h  histogram_test.cc  parser.cc  parser.h  parser_test.cc  proto_util.h  run_local_server.sh  segment_analysis.cc  segment_analysis.h  segmentation.cc  segmentation.h  segmentation_test.cc  (+9 more)
sekai/run_analysis/proto/: BUILD.bazel  run_data.proto  service.proto
sekai/run_analysis/testdata/: run_data_1.csv  run_data_1.json  run_data_v2_1.json
sekai/team_builder/: BUILD.bazel  card_pruning.cc  card_pruning.h  challenge_live_team_builder.cc  challenge_live_team_builder.h  constraint_correctness_test.cc  constraints.cc  constraints.h  constraints_test.cc  event_team_builder.cc  event_team_builder.h  greedy_team_builder.cc  greedy_team_builder.h  max_bonus_team_builder.cc  max_bonus_team_builder.h  max_power_team_builder.cc  max_power_team_builder.h  naive_team_builder.cc  naive_team_builder.h  neighbor_teams.cc  neighbor_teams.h  neighbor_teams_test.cc  optimization_objective.cc  optimization_objective.h  optimization_objective_test.cc  pool_utils.cc  pool_utils.h  pool_utils_test.cc  simulated_annealing_team_builder.cc  simulated_annealing_team_builder.h  skill_selector.cc  skill_selector.h  skill_selector_test.cc  team_builder.h  team_builder_base.h  team_builder_benchmark.cc
sekai/testdata/: event_bonus_112.textproto  event_bonus_117.textproto  support_event_bonus_112_1.textproto  support_event_bonus_140_1.textproto  support_event_bonus_vs_v2.textproto
testing/: BUILD.bazel  git_test_main.cc  test_main.cc  util.cc  util.h
tools/: BUILD.bazel  compile_template_main.cc  scrape_thumbnails.py  scrape_thumbnails.sh
(+60 files in other folders)
