module(name="sekai-public", version="1.0")
bazel_dep(name="abseil-cpp", version="20240116.2")
bazel_dep(name="abseil-py", version="1.4.0")
bazel_dep(name="bs-thread-pool", version="4.1.0")
bazel_dep(name="ctml", version="2.0.0.1")
bazel_dep(name="eigen", version="3.4.0.bcr.1")
bazel_dep(name="emscripten_license", version="3.1.51")
bazel_dep(name="google_benchmark", version="1.8.3")
bazel_dep(name="googletest", version="1.14.0.bcr.1")
bazel_dep(name="gzgz_rules_sass", version="1.0.0")
bazel_dep(name="hedron_compile_commands", version="1.0", dev_dependency=True)
bazel_dep(name="indicators", version="2.3")
bazel_dep(name="nlohmann_json", version="3.11.3")
bazel_dep(name="protobuf", version="3.19.6")
bazel_dep(name="platforms", version="0.0.9")
bazel_dep(name="rules_cc", version="0.0.9")
bazel_dep(name="rules_pkg", version="0.7.0")
bazel_dep(name="rules_proto", version="6.0.0-rc1")
bazel_dep(name="rules_python", version="0.27.1")
bazel_dep(name="sekai-master-db", version="3.8.0.20.3")
bazel_dep(name="zstd", version="1.5.6")
bazel_dep(name="zstd_license", version="1.5.6")

# https://github.com/GZGavinZhao/gzgz_rules_sass
sass = use_extension("@gzgz_rules_sass//sass:extensions.bzl", "sass")
sass.toolchain(sass_version = "1.63.6")
use_repo(sass, "sass_toolchains")
register_toolchains("@sass_toolchains//:all")
