module(name="sekai-public", version="1.0")
bazel_dep(name="abseil-cpp", version="20250127.0")
bazel_dep(name="abseil-py", version="1.4.0")
bazel_dep(name="bs-thread-pool", version="4.1.0")
bazel_dep(name="ctml", version="2.0.0.2")
bazel_dep(name="eigen", version="4.0.0-20241125.bcr.2")
bazel_dep(name="emscripten_license", version="3.1.51")
bazel_dep(name="glfw", version="3.3.9")
bazel_dep(name="google_benchmark", version="1.9.1")
bazel_dep(name="googletest", version="1.16.0")
bazel_dep(name="gzgz_rules_sass", version="1.0.0")
bazel_dep(name="hedron_compile_commands", version="1.0", dev_dependency=True)
bazel_dep(name="indicators", version="2.3")
bazel_dep(name="inja", version="3.4.0")
bazel_dep(name="imgui", version="1.91.8")
bazel_dep(name="implot", version="0.16")
bazel_dep(name="libgit2", version="1.8.1")
bazel_dep(name="nlohmann_json", version="3.11.3")
bazel_dep(name="mbedtls", version="3.6.0")
bazel_dep(name="protobuf", version="30.0")
bazel_dep(name="platforms", version="0.0.11")
bazel_dep(name="rules_cc", version="0.1.1")
bazel_dep(name="rules_pkg", version="1.0.1")
bazel_dep(name="rules_proto", version="7.1.0")
bazel_dep(name="rules_python", version="1.2.0")
bazel_dep(name="sekai-master-db", version="5.5.1.90.1")
bazel_dep(name="zstd", version="1.5.7")
bazel_dep(name="zstd_license", version="1.5.7")

# Version override for TW
single_version_override(module_name="sekai-master-db", version="4.2.0.16.5.tw")

# https://github.com/GZGavinZhao/gzgz_rules_sass
sass = use_extension("@gzgz_rules_sass//sass:extensions.bzl", "sass")
sass.toolchain(sass_version="1.63.6")
use_repo(sass, "sass_toolchains")
register_toolchains("@sass_toolchains//:all")

git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
)
