load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "base",
    srcs = ["init.cc"],
    hdrs = [
        "init.h",
        "zstd.h",
    ],
    deps = [
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/log:initialize",
        "@zstd",
    ],
)

cc_library(
    name = "util",
    hdrs = [
        "util.h",
    ],
    deps = [
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
    ],
)
