load("@gzgz_rules_sass//sass:defs.bzl", "sass_binary")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files")

exports_files([
    "server.py",
])

cc_library(
    name = "console_log_sink",
    srcs = ["console_log_sink.cc"],
    hdrs = ["console_log_sink.h"],
    deps = [
        "@abseil-cpp//absl/base:log_severity",
        "@abseil-cpp//absl/log:log_entry",
        "@abseil-cpp//absl/log:log_sink",
    ],
)

cc_library(
    name = "context",
    srcs = ["context.cc"],
    hdrs = ["context.h"],
    deps = [
        ":display_text",
        ":element_id",
        ":util",
        "//frontend/proto:context_cc_proto",
        "//sekai:card",
        "//sekai:character",
        "//sekai/db:master_db",
        "//sekai/db/proto:all",
        "//sekai/proto:team_cc_proto",
    ],
)

cc_library(
    name = "controller_base",
    srcs = ["controller_base.cc"],
    hdrs = ["controller_base.h"],
    deps = [
        ":log",
        "//sekai:profile",
        "//sekai:proto_util",
        "//sekai/proto:profile_cc_proto",
        "@abseil-cpp//absl/log",
    ],
    alwayslink = True,
)

cc_library(
    name = "controller",
    srcs = ["controller.cc"],
    hdrs = ["controller.h"],
    deps = [
        ":context",
        ":controller_base",
        ":element_id",
        ":log",
        "//frontend/proto:context_cc_proto",
        "//sekai:bitset",
        "//sekai:card",
        "//sekai:challenge_live_estimator",
        "//sekai:config",
        "//sekai:estimator",
        "//sekai:event_bonus",
        "//sekai:profile",
        "//sekai:proto_util",
        "//sekai:team",
        "//sekai/db:master_db",
        "//sekai/db/proto:all",
        "//sekai/proto:card_state_cc_proto",
        "//sekai/proto:team_cc_proto",
        "//sekai/team_builder:challenge_live_team_builder",
        "//sekai/team_builder:simulated_annealing_team_builder",
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@protobuf",
    ],
    alwayslink = True,
)

cc_library(
    name = "display_text",
    srcs = ["display_text.cc"],
    hdrs = ["display_text.h"],
    deps = [
        "//sekai/db/proto:all",
        "@abseil-cpp//absl/log:absl_check",
    ],
)

cc_library(
    name = "element_id",
    srcs = ["element_id.cc"],
    hdrs = ["element_id.h"],
    deps = [
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "init",
    srcs = ["init.cc"],
    hdrs = ["init.h"],
    deps = [
        ":context",
        ":display_text",
        ":element_id",
        "//frontend/proto:context_cc_proto",
        "//sekai:bitset",
        "//sekai:card",
        "//sekai:profile",
        "//sekai:proto_util",
        "//sekai/db:master_db",
        "//sekai/db/proto:all",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/strings",
        "@protobuf",
    ],
)

cc_library(
    name = "log",
    srcs = ["log.cc"],
    hdrs = ["log.h"],
    deps = [
        "@abseil-cpp//absl/log",
        "@protobuf",
    ],
)

cc_library(
    name = "sajii_lib",
    srcs = ["main.cc"],
    deps = [
        ":console_log_sink",
        ":controller",
        ":init",
        "//base",
        "//sekai/db:master_db",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:globals",
        "@abseil-cpp//absl/log:log_sink_registry",
    ],
)

cc_binary(
    name = "sajii",
    additional_linker_inputs = [
        "//frontend/templates:shell_html",
        "//data:flat-db",
    ],
    linkopts = [
        "--bind",
        "-lidbfs.js",
        "--oformat=html",
        "--shell-file $(execpath //frontend/templates:shell_html)",
        "--preload-file $(location //data:flat-db)@data/flat-db",
        "-s ASSERTIONS",
        "-s ALLOW_MEMORY_GROWTH",
        "-s NO_EXIT_RUNTIME",
    ],
    deps = [
        ":sajii_lib",
    ],
)

cc_binary(
    name = "ohnyajii",
    srcs = ["max_cr_main.cc"],
    additional_linker_inputs = [
        "//frontend/templates:ohnyajii_html",
        "//data:flat-db",
    ],
    linkopts = [
        "--bind",
        "-lidbfs.js",
        "--oformat=html",
        "--shell-file $(execpath //frontend/templates:ohnyajii_html)",
        "--preload-file $(location //data:flat-db)@data/flat-db",
        "-s ASSERTIONS",
        "-s ALLOW_MEMORY_GROWTH",
        "-s NO_EXIT_RUNTIME",
    ],
    deps = [
        ":console_log_sink",
        ":controller_base",
        ":init",
        "//base",
        "//sekai:max_character_rank",
        "//sekai/db:master_db",
        "//sekai/html:max_cr",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:globals",
        "@abseil-cpp//absl/log:log_sink_registry",
    ],
)

cc_library(
    name = "util",
    srcs = ["util.cc"],
    hdrs = ["util.h"],
    deps = [
        "//sekai/db:master_db",
    ],
)

pkg_files(
    name = "src_root",
    srcs = [
        "_headers",
        "ohnyajii_lib.js",
        "robots.txt",
        "sajii_lib.js",
        "//frontend/templates:index_html",
        "//frontend/templates:ohnyajii_html",
    ],
)

pkg_files(
    name = "licenses",
    srcs = [
        "@abseil-cpp//:LICENSE",
        "@ctml//:LICENSE",
        "@eigen//:COPYING.MPL2",
        "@emscripten_license//:LICENSE",
        "@protobuf//:LICENSE",
        "@zstd_license//:LICENSE",
    ],
    prefix = "licenses/",
    renames = {
        "@abseil-cpp//:LICENSE": "abseil-cpp/LICENSE.txt",
        "@eigen//:COPYING.MPL2": "eigen/LICENSE.txt",
        "@emscripten_license//:LICENSE": "emscripten/LICENSE.txt",
        "@ctml//:LICENSE": "ctml/LICENSE.txt",
        "@protobuf//:LICENSE": "protobuf/LICENSE.txt",
        "@zstd_license//:LICENSE": "zstd/LICENSE.txt",
    },
)

sass_binary(
    name = "styles",
    src = "styles.sass",
)

sass_binary(
    name = "ohnyajii_css",
    src = "ohnyajii.sass",
)
