module(name="sekai-private", version="1.0")
bazel_dep(name="rules_cc", version="0.0.9")
# Update the sekai-master-db version to match the one in sekai-public.
bazel_dep(name="sekai-master-db", version="3.6.5.41.30")
bazel_dep(name="sekai-public")

local_path_override(
  module_name="sekai-public",
  # Update this path to point to your local sekai-public repo.
  path="/path/to/sekai-public",
)
