module(name="sekai-private", version="1.0")
bazel_dep(name="rules_cc", version="0.0.9")
# Update the sekai-master-db version to match the one in sekai-public.
bazel_dep(name="sekai-master-db", version="3.6.5.41.30")
bazel_dep(name="sekai-public")

archive_override(
  module_name = "sekai-public",
  strip_prefix = "sekai-public-main",
  urls = "https://github.com/Jiiku831/sekai-public/archive/refs/heads/main.zip",
)
